--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,13 @@
 <html>
   
 <body>
+  <nav> 
+    <ul>  
+      <li><a href="index.html">Home</a></li>
+      <li><a href="cars.html">Cars</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 <header>
 <h1> Contact us</h1>
 </header>
