--- a/cars.html
+++ b/cars.html
@@ -5,9 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <img src= "blue car.jpg" alt= "car" width= "350" height="350"
+  
 </head>
 <body>
+  <nav> 
+    <ul>  
+      <li><a href="index.html">Home</a></li>
+      <li><a href="cars.html">Cars</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <img src= "blue car.jpg" alt= "car" width= "350" height="350"
 <img src="red car.jpg" alt="car" width="350" height="350"
 </body>
 </html>
