--- a/cars.html
+++ b/cars.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <nav> 
@@ -15,7 +15,6 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <img src= "blue car.jpg" alt= "car" width= "350" height="350"
-<img src="red car.jpg" alt="car" width="350" height="350"
+  <img src= "blue car.jpg" alt= "car" width= "350" height= "350"
 </body>
 </html>
