--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  
+  <head><link href="style.css" rel="stylesheet" type="text/css" /></head>
 <body>
   <nav> 
     <ul>  
@@ -18,3 +18,6 @@
 <img src="contact.png" alt="help" width="470" height="310"
 </body>
 </html>
+
+
+
