--- a/cars.html
+++ b/cars.html
@@ -15,6 +15,26 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-  <img src= "blue car.jpg" alt= "car" width= "350" height= "350"
+  <div>
+    <img src= "bluecar.jpg" alt= "car" width= "350" height= "350"
+  <header>
+  <img src= "toyota.jpg" alt= "car" width= "350" height="350" id="img1"
+  <header>
+  <img src= "toyota2.jpg" alt= "car" width= "350" height="350"
+  <header>
+  <img src= "Honda.jpg" alt= "car" width="350"  height="350" 
+  <header>  
+   <img src= "honda2.jpg" alt= "car" width= "350" height="350"
+   <header>  
+  <img src= "honda3.jpg" alt= "car" width="350" height="350"
+   <header>
+    <img src= "nissan.jpg" alt="car" width="350" height="300" 
+     <header> 
+    <img src="bmw.jpg" alt="car" width="350" height="300"   
+   </header>  
+
+  <script src="script.js"></script>
+    
 </body>
 </html>
+ 
