--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -27,9 +26,9 @@
   <script src="script.js"></script>
   <footer> 
   <p>Author: Axel Colorado</p>  
+    <img src="blackcar.jpg" alt= "car" width= "340" height="350>
 
   </footer>
-  <img src="black car.jpg" alt="electric car" width="470" height="310"
 </body>
 
 </html>
