--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 
 <body> 
+  <div> 
   <header>
     <h1> Axel's Cars</h1>
   </header>
   <h1>  Thank you for visiting our website</h1>
+  </div>
   <nav> 
     <ul>  
       <li><a href="index.html">Home</a></li>
