--- a/cars.html
+++ b/cars.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,9 +16,8 @@
     </ul>
   </nav>
   <div>
-    <img src= "bluecar.jpg" alt= "car" width= "350" height= "350"
-  <header>
-  <img src= "toyota.jpg" alt= "car" width= "350" height="350" id="img1"
+    <img src= "bluecar.jpg" alt= "car" width= "350" height="350"
+  
   <header>
   <img src= "toyota2.jpg" alt= "car" width= "350" height="350"
   <header>
@@ -30,8 +29,9 @@
    <header>
     <img src= "nissan.jpg" alt="car" width="350" height="300" 
      <header> 
-    <img src="bmw.jpg" alt="car" width="350" height="300"   
+    <img src="BMW M4.avif" alt="car" width="350" height="300"   
    </header>  
+<img src= "Tesla-Roadster-103.jpg" alt= "car" width= "350" height="350"
 
   <script src="script.js"></script>
     
