--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
   <script src="script.js"></script>
   <footer> 
   <p>Author: Axel Colorado</p>  
-    <img src="blackcar.jpg" alt= "car" width= "340" height="350>
+    
+    <img src="blackcar.jpg" alt= "car" width= "340" height="350"
 
   </footer>
 </body>
 
 </html>
-
-
-
